- improved ApplicationContextLoader; - various minor improvements.